--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-token": "^1.0.9",
     "mongoose": "^8.2.4"
   }
 }
