--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.8",
     "react": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^3.0.1",
-    "recharts": "^2.9.0"
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
